# template-docker

./: .dockerignore  Dockerfile  dependencies.txt  main.py  pyproject.toml  readme.md  requirements.txt
