[tool.poetry]
name = "test-kbs-poetry"
version = "1"
description = "I dont know"
authors = ["muzammil-git <syedmuzammil67@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
certifi = "^2024.12.14"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
